@@ -10,10 +10,11 @@ $;PERFORM_VALIDATION$;=T
 ;; translation table number
 $;CODON_TABLE$;=11
 $;OTHER_OPTS$;=
-;; The iterator list file
-$;ITERATOR_LIST_FILE$;=
+;;List of fasta files. Must be named the same as the .tbl input files.
+$;FASTA_INPUT_LIST$; = 
 
 [input]
+;;Input .tbl files
 $;INPUT_FILE_LIST$; = 
 $;INPUT_FILE$; = 
 $;INPUT_DIRECTORY$; = 
