@@ -21,7 +21,7 @@
         </command>
         <!--Processing-->
         <!--Iterator-->
-        <INCLUDE file="$;DOCS_DIR$;/iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML,$;ITERATOR_LIST$;=$;ITERATOR_LIST_FILE$;"/> 
+        <INCLUDE file="$;DOCS_DIR$;/file_iterator_template.xml" keys="$;ITERATOR_NAME$;=ITERATOR1,$;ITERATOR_XML$;=ITERATOR1_XML">
         <!--Postprocessing-->
         <command>
             <type>RunUnixCommand</type>
@@ -76,46 +76,6 @@
                 <key>--output_list</key>
                 <value>$;VAL_OUTPUT_LIST$;</value>
             </param>
-        </command>
-        <command>
-            <type>RunUnixCommand</type>
-            <name>create .discrpt list</name>
-            <state>incomplete</state>
-            <executable>$;BIN_DIR$;/create_list_file</executable>
-            <param>  
-                <key>--directory</key>
-                <value>$;OUTPUT_DIRECTORY$;</value>
-            </param>
-            <param>  
-                <key>--regex</key>
-                <value>".*\.discrpt"</value>
-            </param>
-            <param>  
-                <key>--output_list</key>
-                <value>$;DISCRPT_OUTPUT_LIST$;</value>
-            </param>
-        </command>
-        <command>
-            <type>RunUnixCommand</type>
-            <name>Scan .val and .discrpt files</name>
-            <state>incomplete</state>
-            <executable>$;BIN_DIR$;/scanValAndDiscRptFiles</executable>
-            <param>  
-                <key>--val</key>
-                <value>$;VAL_OUTPUT_LIST$;</value>
-            </param>
-            <param>  
-                <key>--discrpt</key>
-                <value>$;DISCRPT_OUTPUT_LIST$;</value>
-            </param>
-              <param>  
-                <key>stderr</key>
-                <value>$;TMP_DIR$;/scanValAndDiscRptFiles.stderr</value>
-              </param>
-              <param>  
-                <key>stdout</key>
-                <value>$;TMP_DIR$;/scanValAndDiscRptFiles.stdout</value>
-              </param>
         </command>
     </commandSet>
 </commandSetRoot>
